logs/dag_id=Proyecto_Final_USD_ETL/run_id=manual__2024-07-03T231518.720387+0000/task_id=download_data/attempt=1.log
[2024-07-03T23:15:20.400+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-07-03T23:15:20.564+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: Proyecto_Final_USD_ETL.download_data manual__2024-07-03T23:15:18.720387+00:00 [queued]>
[2024-07-03T23:15:20.571+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: Proyecto_Final_USD_ETL.download_data manual__2024-07-03T23:15:18.720387+00:00 [queued]>
[2024-07-03T23:15:20.571+0000] {taskinstance.py:2306} INFO - Starting attempt 1 of 6
[2024-07-03T23:15:20.581+0000] {taskinstance.py:2330} INFO - Executing <Task(PythonOperator): download_data> on 2024-07-03 23:15:18.720387+00:00
[2024-07-03T23:15:20.586+0000] {warnings.py:112} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61: DeprecationWarning: This process (pid=429) is multi-threaded, use of fork() may lead to deadlocks in the child.
  pid = os.fork()

[2024-07-03T23:15:20.588+0000] {standard_task_runner.py:63} INFO - Started process 431 to run task
[2024-07-03T23:15:20.587+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'Proyecto_Final_USD_ETL', 'download_data', 'manual__2024-07-03T23:15:18.720387+00:00', '--job-id', '86', '--raw', '--subdir', 'DAGS_FOLDER/ETL_USD.py', '--cfg-path', '/tmp/tmp3hts33f9']
[2024-07-03T23:15:20.589+0000] {standard_task_runner.py:91} INFO - Job 86: Subtask download_data
[2024-07-03T23:15:20.620+0000] {task_command.py:426} INFO - Running <TaskInstance: Proyecto_Final_USD_ETL.download_data manual__2024-07-03T23:15:18.720387+00:00 [running]> on host 5a0cf2cc04d9
[2024-07-03T23:15:20.677+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='gabor' AIRFLOW_CTX_DAG_ID='Proyecto_Final_USD_ETL' AIRFLOW_CTX_TASK_ID='download_data' AIRFLOW_CTX_EXECUTION_DATE='2024-07-03T23:15:18.720387+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-07-03T23:15:18.720387+00:00'
[2024-07-03T23:15:20.678+0000] {taskinstance.py:430} INFO - ::endgroup::
[2024-07-03T23:15:21.951+0000] {logging_mixin.py:188} INFO - Connected to Redshift successfully!
[2024-07-03T23:15:22.119+0000] {ETL_USD.py:73} INFO - <class 'pandas.core.frame.DataFrame'>
RangeIndex: 7 entries, 0 to 6
Data columns (total 6 columns):
 #   Column              Non-Null Count  Dtype  
---  ------              --------------  -----  
 0   moneda              7 non-null      object 
 1   casa                7 non-null      object 
 2   nombre              7 non-null      object 
 3   compra              7 non-null      float64
 4   venta               7 non-null      float64
 5   fechaActualizacion  7 non-null      object 
dtypes: float64(2), object(4)
memory usage: 468.0+ bytes

[2024-07-03T23:15:22.119+0000] {ETL_USD.py:74} INFO - Data created
[2024-07-03T23:15:22.129+0000] {warnings.py:112} WARNING - /opt/***/dags/ETL_USD.py:90: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.
  redshift_ids = pd.read_sql(redshift_ids_query, con=conn)

[2024-07-03T23:15:22.646+0000] {logging_mixin.py:188} INFO - Failed to upload data
[2024-07-03T23:15:22.646+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2024-07-03T23:15:22.647+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/pandas/io/sql.py", line 2262, in execute
    cur.execute(sql, *args)
psycopg2.errors.SyntaxError: syntax error at or near "{"
LINE 1: SELECT id FROM robyrubirex_coderhouse.{table}
                                              ^


The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 401, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 235, in execute
    return_value = self.execute_callable()
                   ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 252, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/airflow/dags/ETL_USD.py", line 126, in process_data
    upload_data(conn=conn_data, data=df, table="stage_api_dolarucos")
  File "/opt/airflow/dags/ETL_USD.py", line 90, in upload_data
    redshift_ids = pd.read_sql(redshift_ids_query, con=conn)
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/pandas/io/sql.py", line 654, in read_sql
    return pandas_sql.read_query(
           ^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/pandas/io/sql.py", line 2326, in read_query
    cursor = self.execute(sql, params)
             ^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/pandas/io/sql.py", line 2274, in execute
    raise ex from exc
pandas.errors.DatabaseError: Execution failed on sql 'SELECT id FROM robyrubirex_coderhouse.{table}': syntax error at or near "{"
LINE 1: SELECT id FROM robyrubirex_coderhouse.{table}
                                              ^

[2024-07-03T23:15:22.654+0000] {taskinstance.py:1206} INFO - Marking task as UP_FOR_RETRY. dag_id=Proyecto_Final_USD_ETL, task_id=download_data, run_id=manual__2024-07-03T23:15:18.720387+00:00, execution_date=20240703T231518, start_date=20240703T231520, end_date=20240703T231522
[2024-07-03T23:15:22.665+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 86 for task download_data (Execution failed on sql 'SELECT id FROM robyrubirex_coderhouse.{table}': syntax error at or near "{"
LINE 1: SELECT id FROM robyrubirex_coderhouse.{table}
                                              ^
; 431)
[2024-07-03T23:15:22.687+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-07-03T23:15:22.703+0000] {taskinstance.py:3503} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-07-03T23:15:22.706+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
